角色名称补充翻译

--- a/translations/texts/names/elduukharfemale.namesource.json
+++ b/translations/texts/names/elduukharfemale.namesource.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "AMATHIER",
+      "Chs": "阿马蒂尔",
       "Eng": "AMATHIER"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ATLA",
+      "Chs": "阿特拉",
       "Eng": "ATLA"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "CALYPSO",
+      "Chs": "卡利普索",
       "Eng": "CALYPSO"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "COATLA",
+      "Chs": "科特拉",
       "Eng": "COATLA"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "CYNDARI",
+      "Chs": "辛达利",
       "Eng": "CYNDARI"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "FENRA",
+      "Chs": "芬拉",
       "Eng": "FENRA"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "JAYDE",
+      "Chs": "杰德",
       "Eng": "JAYDE"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "JYNX",
+      "Chs": "金克斯",
       "Eng": "JYNX"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "KONI",
+      "Chs": "科尼",
       "Eng": "KONI"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "KYRA",
+      "Chs": "凯拉",
       "Eng": "KYRA"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "PLISK",
+      "Chs": "普利斯克",
       "Eng": "PLISK"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "RUPPA",
+      "Chs": "卢比",
       "Eng": "RUPPA"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SAURA",
+      "Chs": "苏拉",
       "Eng": "SAURA"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SAURIE",
+      "Chs": "苏丽",
       "Eng": "SAURIE"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TALISK",
+      "Chs": "塔利斯克",
       "Eng": "TALISK"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TAZURA",
+      "Chs": "塔祖拉",
       "Eng": "TAZURA"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "THRANTA",
+      "Chs": "色兰塔",
       "Eng": "THRANTA"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TORIEL",
+      "Chs": "托利尔",
       "Eng": "TORIEL"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": "VENI",
+      "Chs": "威尼斯",
       "Eng": "VENI"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "VERNIS",
+      "Chs": "游标",
       "Eng": "VERNIS"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "VRII",
+      "Chs": "瓦利",
       "Eng": "VRII"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "YAMEK",
+      "Chs": "亚梅克",
       "Eng": "YAMEK"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": "YRONANNA",
+      "Chs": "苏里南",
       "Eng": "YRONANNA"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ZILEMIN",
+      "Chs": "齐勒敏",
       "Eng": "ZILEMIN"
     }
   }
