--- a/translations/texts/names/elduukharmale.namesource.json
+++ b/translations/texts/names/elduukharmale.namesource.json
@@ -8,7 +8,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ATL",
+      "Chs": "阿特尔",
       "Eng": "ATL"
     }
   },
@@ -21,7 +21,7 @@
       ]
     },
     "Texts": {
-      "Chs": "BALRUT",
+      "Chs": "巴鲁特",
       "Eng": "BALRUT"
     }
   },
@@ -34,7 +34,7 @@
       ]
     },
     "Texts": {
-      "Chs": "BASSIL",
+      "Chs": "摇篮",
       "Eng": "BASSIL"
     }
   },
@@ -47,7 +47,7 @@
       ]
     },
     "Texts": {
-      "Chs": "COATL",
+      "Chs": "蔻特尔",
       "Eng": "COATL"
     }
   },
@@ -60,7 +60,7 @@
       ]
     },
     "Texts": {
-      "Chs": "DRASSIL",
+      "Chs": "德拉西尔",
       "Eng": "DRASSIL"
     }
   },
@@ -73,7 +73,7 @@
       ]
     },
     "Texts": {
-      "Chs": "FENRAN",
+      "Chs": "芬兰",
       "Eng": "FENRAN"
     }
   },
@@ -86,7 +86,7 @@
       ]
     },
     "Texts": {
-      "Chs": "JASPITIR",
+      "Chs": "贾斯皮蒂尔",
       "Eng": "JASPITIR"
     }
   },
@@ -99,7 +99,7 @@
       ]
     },
     "Texts": {
-      "Chs": "KONIR",
+      "Chs": "科尼尔",
       "Eng": "KONIR"
     }
   },
@@ -112,7 +112,7 @@
       ]
     },
     "Texts": {
-      "Chs": "NATHANRIEL",
+      "Chs": "纳坦瑞尔",
       "Eng": "NATHANRIEL"
     }
   },
@@ -125,7 +125,7 @@
       ]
     },
     "Texts": {
-      "Chs": "NECAHUAL",
+      "Chs": "内卡华尔",
       "Eng": "NECAHUAL"
     }
   },
@@ -138,7 +138,7 @@
       ]
     },
     "Texts": {
-      "Chs": "RIDLEY",
+      "Chs": "里德利",
       "Eng": "RIDLEY"
     }
   },
@@ -151,7 +151,7 @@
       ]
     },
     "Texts": {
-      "Chs": "RUPER",
+      "Chs": "卢比",
       "Eng": "RUPER"
     }
   },
@@ -164,7 +164,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SAURAS",
+      "Chs": "索拉斯",
       "Eng": "SAURAS"
     }
   },
@@ -177,7 +177,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SAUREKI",
+      "Chs": "索雷基",
       "Eng": "SAUREKI"
     }
   },
@@ -190,7 +190,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SILISPEKT",
+      "Chs": "西利斯佩克特",
       "Eng": "SILISPEKT"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SILLIS",
+      "Chs": "西利斯",
       "Eng": "SILLIS"
     }
   },
@@ -216,7 +216,7 @@
       ]
     },
     "Texts": {
-      "Chs": "SPYRUSUS",
+      "Chs": "斯派拉萨斯",
       "Eng": "SPYRUSUS"
     }
   },
@@ -229,7 +229,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TAZURU",
+      "Chs": "塔祖鲁",
       "Eng": "TAZURU"
     }
   },
@@ -242,7 +242,7 @@
       ]
     },
     "Texts": {
-      "Chs": "THRANT",
+      "Chs": "奴隶",
       "Eng": "THRANT"
     }
   },
@@ -255,7 +255,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TORJIBUR",
+      "Chs": "托吉布",
       "Eng": "TORJIBUR"
     }
   },
@@ -268,7 +268,7 @@
       ]
     },
     "Texts": {
-      "Chs": "VENO",
+      "Chs": "维诺",
       "Eng": "VENO"
     }
   },
@@ -281,7 +281,7 @@
       ]
     },
     "Texts": {
-      "Chs": "VERNIN",
+      "Chs": "弗宁",
       "Eng": "VERNIN"
     }
   },
@@ -294,7 +294,7 @@
       ]
     },
     "Texts": {
-      "Chs": "YRONANN",
+      "Chs": "伊罗南",
       "Eng": "YRONANN"
     }
   },
@@ -307,7 +307,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ZILEMON",
+      "Chs": "齐勒蒙",
       "Eng": "ZILEMON"
     }
   }
