--- a/translations/texts/names/shared_male.namesource.json
+++ b/translations/texts/names/shared_male.namesource.json
@@ -11,7 +11,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ARI",
+      "Chs": "阿里",
       "Eng": "ARI"
     }
   },
@@ -27,7 +27,7 @@
       ]
     },
     "Texts": {
-      "Chs": "COSZCATL",
+      "Chs": "科斯卡特",
       "Eng": "COSZCATL"
     }
   },
@@ -43,7 +43,7 @@
       ]
     },
     "Texts": {
-      "Chs": "COYOTL",
+      "Chs": "科约尔",
       "Eng": "COYOTL"
     }
   },
@@ -59,7 +59,7 @@
       ]
     },
     "Texts": {
-      "Chs": "CUALLI",
+      "Chs": "夸利",
       "Eng": "CUALLI"
     }
   },
@@ -75,7 +75,7 @@
       ]
     },
     "Texts": {
-      "Chs": "DRATHI",
+      "Chs": "德拉蒂",
       "Eng": "DRATHI"
     }
   },
@@ -91,7 +91,7 @@
       ]
     },
     "Texts": {
-      "Chs": "EHECATL",
+      "Chs": "艾克卡特尔",
       "Eng": "EHECATL"
     }
   },
@@ -107,7 +107,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ELEUIA",
+      "Chs": "伊莱亚",
       "Eng": "ELEUIA"
     }
   },
@@ -123,7 +123,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ELOXOCHITL",
+      "Chs": "埃洛克希特尔",
       "Eng": "ELOXOCHITL"
     }
   },
@@ -139,7 +139,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ETALPALLI",
+      "Chs": "阿塔帕里",
       "Eng": "ETALPALLI"
     }
   },
@@ -155,7 +155,7 @@
       ]
     },
     "Texts": {
-      "Chs": "EZTLI",
+      "Chs": "埃兹特利",
       "Eng": "EZTLI"
     }
   },
@@ -171,7 +171,7 @@
       ]
     },
     "Texts": {
-      "Chs": "FIZZK",
+      "Chs": "菲兹",
       "Eng": "FIZZK"
     }
   },
@@ -187,7 +187,7 @@
       ]
     },
     "Texts": {
-      "Chs": "GAZZIN",
+      "Chs": "加赞",
       "Eng": "GAZZIN"
     }
   },
@@ -203,7 +203,7 @@
       ]
     },
     "Texts": {
-      "Chs": "HALFIER",
+      "Chs": "哈菲尔",
       "Eng": "HALFIER"
     }
   },
@@ -219,7 +219,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ITOTIA",
+      "Chs": "伊托希亚",
       "Eng": "ITOTIA"
     }
   },
@@ -235,7 +235,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ITZEL",
+      "Chs": "伊泽尔",
       "Eng": "ITZEL"
     }
   },
@@ -251,7 +251,7 @@
       ]
     },
     "Texts": {
-      "Chs": "IXTLI",
+      "Chs": "伊斯特利",
       "Eng": "IXTLI"
     }
   },
@@ -267,7 +267,7 @@
       ]
     },
     "Texts": {
-      "Chs": "IZEL",
+      "Chs": "伊泽尔",
       "Eng": "IZEL"
     }
   },
@@ -283,7 +283,7 @@
       ]
     },
     "Texts": {
-      "Chs": "JAZZ",
+      "Chs": "爵士",
       "Eng": "JAZZ"
     }
   },
@@ -299,7 +299,7 @@
       ]
     },
     "Texts": {
-      "Chs": "KYRU",
+      "Chs": "凯鲁",
       "Eng": "KYRU"
     }
   },
@@ -315,7 +315,7 @@
       ]
     },
     "Texts": {
-      "Chs": "KYURU",
+      "Chs": "九州",
       "Eng": "KYURU"
     }
   },
@@ -331,7 +331,7 @@
       ]
     },
     "Texts": {
-      "Chs": "LEOX",
+      "Chs": "利奥",
       "Eng": "LEOX"
     }
   },
@@ -347,7 +347,7 @@
       ]
     },
     "Texts": {
-      "Chs": "NECALLI",
+      "Chs": "内卡利",
       "Eng": "NECALLI"
     }
   },
@@ -363,7 +363,7 @@
       ]
     },
     "Texts": {
-      "Chs": "NENETL",
+      "Chs": "内特尔",
       "Eng": "NENETL"
     }
   },
@@ -379,7 +379,7 @@
       ]
     },
     "Texts": {
-      "Chs": "OLLIN",
+      "Chs": "奥林",
       "Eng": "OLLIN"
     }
   },
@@ -395,7 +395,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ORI",
+      "Chs": "奥利",
       "Eng": "ORI"
     }
   },
@@ -411,7 +411,7 @@
       ]
     },
     "Texts": {
-      "Chs": "PAPAN",
+      "Chs": "教皇",
       "Eng": "PAPAN"
     }
   },
@@ -427,7 +427,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ROONTAYL",
+      "Chs": "鲁坦泰尔",
       "Eng": "ROONTAYL"
     }
   },
@@ -443,7 +443,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TEICUIH",
+      "Chs": "泰基",
       "Eng": "TEICUIH"
     }
   },
@@ -459,7 +459,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TENOCH",
+      "Chs": "特诺赫",
       "Eng": "TENOCH"
     }
   },
@@ -475,7 +475,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TEPIN",
+      "Chs": "特平",
       "Eng": "TEPIN"
     }
   },
@@ -491,7 +491,7 @@
       ]
     },
     "Texts": {
-      "Chs": "TERITH",
+      "Chs": "特里斯",
       "Eng": "TERITH"
     }
   },
@@ -507,7 +507,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ZOLIN",
+      "Chs": "佐林",
       "Eng": "ZOLIN"
     }
   },
@@ -523,7 +523,7 @@
       ]
     },
     "Texts": {
-      "Chs": "ZYANYA",
+      "Chs": "齐亚亚",
       "Eng": "ZYANYA"
     }
   }
