--- a/translations/texts/quests/fu_questlines/byos/fu_byosftldrive.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/byos/fu_byosftldrive.questtemplate.json
@@ -19,7 +19,7 @@
       ]
     },
     "Texts": {
-      "CHs": "探索附近的卫星以寻找^pink;厄尔吉斯水晶^reset;",
+      "Chs": "探索附近的卫星以寻找^pink;厄尔吉斯水晶^reset;",
       "Eng": "Explore a nearby moon to find ^pink;Erchius Crystals^reset;"
     }
   },
