--- a/translations/texts/quests/fu_questlines/other/shared_.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/other/shared_.questtemplate.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Station Upgrade tracker"
+      "Eng": "Station Upgrade tracker",
+      "Chs": "站点升级追踪器"
     }
   },
   {
@@ -36,7 +37,8 @@
       ]
     },
     "Texts": {
-      "Eng": "This isn't visible"
+      "Eng": "This isn't visible",
+      "Chs": "这不可见"
     }
   },
   {
@@ -59,7 +61,8 @@
       ]
     },
     "Texts": {
-      "Eng": "You shouldn't be able to see this in your log."
+      "Eng": "You shouldn't be able to see this in your log.",
+      "Chs": "你不应该在日志中看到这个。"
     }
   }
 ]
