--- a/translations/texts/quests/fu_questlines/other/tricorder.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/other/tricorder.questtemplate.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tricorder tracker"
+      "Eng": "Tricorder tracker",
+      "Chs": "三阶追踪器"
     }
   }
 ]
