--- a/translations/texts/quests/fu_questlines/outpost/kevin_tasks/create_clothingfabricator3e.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/outpost/kevin_tasks/create_clothingfabricator3e.questtemplate.json
@@ -19,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "I bet you can't collect more brains than I can! In fact, I ^orange;double-dog-dare^reset; you to collect ^orange;more brains^reset; than I can! Remove ^orange;50 brains^reset; from random life-forms...that's a decent start."
+      "Eng": "I bet you can't collect more brains than I can! In fact, I ^orange;double-dog-dare^reset; you to collect ^orange;more brains^reset; than I can! Remove ^orange;50 brains^reset; from random life-forms...that's a decent start.",
+      "Chs": "我打赌你收集的大脑不会比我多！事实上，我^orange;敢双倍确认^reset;你要收集^orange;更多的大脑^reset;我做不到！删除^orange;50脑^reset;；从随机生命形式。。。这是一个不错的开始。"
     }
   },
   {
