--- a/translations/texts/quests/fu_questlines/outpost/kevin_tasks/create_clothingfabricator4.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/outpost/kevin_tasks/create_clothingfabricator4.questtemplate.json
@@ -43,7 +43,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wanna try something ^orange;super fun^reset;? Let's create something previously thought to be ^green;hypothetical^reset;! Let's try making ^orange;Neutronium^reset; and ^orange;Anti-Neutronium^reset;! I'll give you something ^red;truly amazing^reset; if you can do it! I promise. For real, this time."
+      "Eng": "Wanna try something ^orange;super fun^reset;? Let's create something previously thought to be ^green;hypothetical^reset;! Let's try making ^orange;Neutronium^reset; and ^orange;Anti-Neutronium^reset;! I'll give you something ^red;truly amazing^reset; if you can do it! I promise. For real, this time.",
+      "Chs": "想试试这个^orange;超级有趣的东西^reset;吗？让我们创造一些以前被认为是^green;假想^reset;的东西！让我们试着做^orange;中子素^reset;和^orange;反中子素^reset;！我会给你一些^red;真正令人惊叹的东西^reset;如果你能做到话！我保证。真的，这一次。"
     }
   }
 ]
