--- a/translations/texts/quests/fu_questlines/tutorial/start_basics3b.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/tutorial/start_basics3b.questtemplate.json
@@ -43,7 +43,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sometimes, the darkness can prove a horrible hindrance. That's where tha ^orange;Oil^reset; I got ya ter make comes in: You can craft a ^orange;Lantern Stick^reset; to see in the dark at a ^orange;Foraging Table^reset;. ^green;Research^reset; into ^orange;Agriculture^reset; to learn how."
+      "Eng": "Sometimes, the darkness can prove a horrible hindrance. That's where tha ^orange;Oil^reset; I got ya ter make comes in: You can craft a ^orange;Lantern Stick^reset; to see in the dark at a ^orange;Foraging Table^reset;. ^green;Research^reset; into ^orange;Agriculture^reset; to learn how.",
+      "Chs": "有时，黑暗会成为一种可怕的障碍。那是个^orange;充满油^reset;的地方。我让你来做：你可以做一个^orange;灯笼杆^reset;在黑暗中看^orange;采集工作台^reset;学习如何^green;研究^reset;^orange;农业^reset;。"
     }
   }
 ]
