--- a/translations/texts/quests/fu_questlines/tutorial/vinj/create_matterassembler.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/tutorial/vinj/create_matterassembler.questtemplate.json
@@ -31,7 +31,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Research ^cyan;Agriculture^reset; and create a ^orange;Foraging Table^reset;."
+      "Eng": "Research ^cyan;Agriculture^reset; and create a ^orange;Foraging Table^reset;.",
+      "Chs": "研究^cyan;农业^reset;并创建一个^orange;采集工作台^reset;。"
     }
   },
   {
@@ -78,7 +79,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thanks to ^green;Vinalisj^reset;, you've managed your first steps towards escaping this planet. He asked you to visit a nearby ^orange;Dark Cavern^reset;, which seems to have an ^green;Energy Source^reset; that may prove vital in your repairs."
+      "Eng": "Thanks to ^green;Vinalisj^reset;, you've managed your first steps towards escaping this planet. He asked you to visit a nearby ^orange;Dark Cavern^reset;, which seems to have an ^green;Energy Source^reset; that may prove vital in your repairs.",
+      "Chs": "感谢^green;维纳利斯^reset;，你已经迈出了逃离这个星球的第一步。他让你去参观附近的一个^orange;黑暗洞穴^reset;，看起来有^green;能源^reset;这可能对你的维修至关重要。"
     }
   },
   {
