--- a/translations/texts/quests/fu_questlines/tutorial/vinj/fuquest_powergeneration2.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/tutorial/vinj/fuquest_powergeneration2.questtemplate.json
@@ -19,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "If you want to step up your game, try creating a ^orange;Item Transference Device^reset; and a ^orange;Storage Bridge^reset;, then link them to the ^green;Sifter^reset;! It can automatically move the items from machines (such as a ^orange;Wooden Sifter^reset;) to a storage container, or vice versa!"
+      "Eng": "If you want to step up your game, try creating a ^orange;Item Transference Device^reset; and a ^orange;Storage Bridge^reset;, then link them to the ^green;Sifter^reset;! It can automatically move the items from machines (such as a ^orange;Wooden Sifter^reset;) to a storage container, or vice versa!",
+      "Chs": "如果你想提高你的游戏体验，试着创建一个^orange;物品传输器^reset;和一个^orange;储存桥接器^reset;，然后将它们链接到^green;筛粉机^reset;！它可以自动将物品从机器（如^orange;木制筛粉机^reset;）移动到存储容器，反之亦然！"
     }
   },
   {
