--- a/translations/texts/quests/optionalhardmode/fu_t10_precursor.questtemplate.json
+++ b/translations/texts/quests/optionalhardmode/fu_t10_precursor.questtemplate.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "...mew. Telemetry data. Similar energy to...mew? What?!? And Kevin left notes, largely gibberish except one. \"SHE is here? No, it's not her, just a shell.\" Mew scared now."
+      "Eng": "...mew. Telemetry data. Similar energy to...mew? What?!? And Kevin left notes, largely gibberish except one. \"SHE is here? No, it's not her, just a shell.\" Mew scared now.",
+      "Chs": "…喵。遥测数据。与…喵类似的能量？什么？！？凯文留下了笔记，除了一个以外，大部分都是胡言乱语。“她在这里？不，不是她，只是个贝壳。”喵现在很害怕。"
     }
   },
   {
