--- a/translations/texts/quests/fu_questlines/other/madness_reduction.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/other/madness_reduction.questtemplate.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "MAdness Loss Tracker"
+      "Eng": "MAdness Loss Tracker",
+      "Chs": "疯癫损失追踪器"
     }
   }
 ]
